# peeroxide

./: .gitignore  AGENTS.md  API_CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS_PLAN.md  FINDINGS.md  FINDINGS2.md  ISSUES.md  LICENSE-APACHE  LONGRUN_TASK.md  PR-TODOS.md  RALPH_PROMPT.md  README.md  REFACTOR_PLAN.md  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: binary-release.yml  ci.yml  docs-site.yml  release.yml
docs/: AGENTS.md  ascii_art.txt  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/announce/: architecture.md  echo-protocol.md  overview.md
docs/src/appendices/: limits-and-performance.md  security-model.md
docs/src/chat/: interactive-tui.md  overview.md  protocol.md  reference.md  user-guide.md  wire-format.md
docs/src/concepts/: dht-and-routing.md  dht-primitives.md  encrypted-streams.md  keys-and-identity.md  peer-identity.md  topics-and-discovery.md
docs/src/cp/: architecture.md  output-formats.md  overview.md  protocol.md  reliability.md
docs/src/dd/: architecture.md  format.md  future-direction.md  operations.md  overview.md
docs/src/deaddrop/: architecture.md  format.md  future-direction.md  operations.md  overview.md
docs/src/init/: overview.md
docs/src/lookup/: output-formats.md  overview.md
docs/src/ping/: architecture.md  output-formats.md  overview.md
libudx/: CHANGELOG.md  Cargo.toml  PROTOCOL.md  README.md
libudx/src/: error.rs  lib.rs
libudx/src/native/: async_stream.rs  header.rs  mod.rs  runtime.rs  socket.rs  stream.rs
libudx/src/native/congestion/: bbr.rs  filter.rs  mod.rs  pacing.rs  rate.rs
libudx/tests/: async_stream.rs  errors.rs  mtu_probing.rs  multiplexing.rs  network_sim.rs  relay.rs  socket.rs  stream_interop.rs  stream_lifecycle.rs  stream_relay.rs  throughput.rs  udx_interop.rs  wire_compat.rs  wire_format.rs
libudx/tests/common/: mod.rs  proxy.rs
libudx/tests/fixtures/: wire-format-reference.json
peeroxide/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
peeroxide-cli/: AGENTS.md  CHANGELOG.md  CHAT.md  CHAT_CLI.md  CHAT_IMPL_PROMPT.md  Cargo.toml  DEADDROP_V2.md  DEADDROP_V3.md  DEBUG_FLAG.md  DHT_REF.md  PLANNING.md  README.md
peeroxide-cli/src/: ascii_art.txt  config.rs  main.rs  manpage.rs
peeroxide-cli/src/cmd/: announce.rs  config.rs  cp.rs  deaddrop.rs  init.rs  lookup.rs  mod.rs  node.rs  ping.rs
peeroxide-cli/src/cmd/chat/: crypto.rs  debug.rs  display.rs  dm.rs  dm_cmd.rs  feed.rs  inbox.rs  inbox_cmd.rs  inbox_monitor.rs  join.rs  known_users.rs  mod.rs  name_resolver.rs  names.rs  nexus.rs  ordering.rs  post.rs  probe.rs  profile.rs  publisher.rs  reader.rs  session.rs  wire.rs
peeroxide-cli/src/cmd/chat/tui/: commands.rs  input.rs  interactive.rs  line.rs  mod.rs  status.rs  terminal.rs
peeroxide-cli/src/cmd/deaddrop/: mod.rs  v1.rs  v2.rs
peeroxide-cli/src/cmd/deaddrop/progress/: bar.rs  events.rs  format.rs  json.rs  log.rs  mod.rs  mode.rs  rate.rs  reporter.rs  state.rs
peeroxide-cli/src/cmd/deaddrop/v2/: build.rs  fetch.rs  keys.rs  mod.rs  need.rs  publish.rs  queue.rs  stream.rs  tree.rs  wire.rs
peeroxide-cli/tests/: chat_integration.rs  live_commands.rs  local_commands.rs
peeroxide-dht/: CHANGELOG.md  Cargo.toml  README.md
peeroxide-dht/examples/: relay_soak.rs
peeroxide-dht/src/: blind_relay.rs  compact_encoding.rs  crypto.rs  holepuncher.rs  hyperdht.rs  hyperdht_messages.rs  io.rs  lib.rs  messages.rs  nat.rs  noise.rs  noise_wrap.rs  peer.rs  persistent.rs  protomux.rs  query.rs  router.rs  routing_table.rs  rpc.rs  secret_stream.rs  secretstream.rs  secure_payload.rs  socket_pool.rs
peeroxide-dht/src/compact_encoding/: tests.rs
peeroxide-dht/tests/: blind_relay_golden_interop.rs  dht_golden_interop.rs  dht_interop.rs  golden_interop.rs  hyperdht_connect_interop.rs  hyperdht_golden_interop.rs  hyperdht_interop.rs  live_announce_lookup.rs  live_bootstrap.rs  noise_golden_interop.rs  noise_ik_golden_interop.rs  protomux_golden_interop.rs  protomux_interop.rs  relay_encrypted.rs  secret_stream_interop.rs  secure_payload_golden_interop.rs
peeroxide/examples/: hello.rs  peer_test.rs  relay_test.rs  swarm_announce.rs  swarm_join.rs
peeroxide/src/: connection_set.rs  error.rs  lib.rs  peer_discovery.rs  peer_info.rs  swarm.rs
peeroxide/tests/: hyperswarm_interop.rs
tests/: run_compact_encoding.sh  run_dht_rpc.sh  run_encrypted_connections.sh  run_hole_punching.sh  run_hyperdht.sh  run_hyperswarm.sh  run_libudx.sh  run_relay.sh
tests/docker/: Dockerfile.node-peer  Dockerfile.rust-peer  docker-compose.nat.yml  run-nat-test.sh
tests/docker/scripts/: nat-setup.sh  run-peer.sh
tests/interop/: blind-relay-fixtures.json  dht-rpc-fixtures.json  golden-fixtures.json  hyperdht-fixtures.json  noise-fixtures.json  noise-ik-fixtures.json  protomux-fixtures.json  secure-payload-fixtures.json
tests/node/: blind-relay-server.js  dht-rpc-server.js  generate-blind-relay-golden.js  generate-dht-golden.js  generate-golden.js  generate-hyperdht-golden.js  generate-noise-golden.js  generate-noise-ik-golden.js  generate-protomux-golden.js  hyperdht-live-peer.js  hyperdht-peer.js  hyperswarm-announce.js  hyperswarm-join.js  hyperswarm-server.js  package-lock.json  package.json  protomux-server.js  secret-stream-server.js  udx-echo-server-multi.js  udx-echo-server.js  udx-large-transfer.js  udx-wire-capture.js
