[package]
name = "libudx"
version = "1.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Pure Rust implementation of the UDX protocol (tokio-compatible)"
readme = "README.md"
keywords = ["udp", "transport", "networking", "p2p", "congestion-control"]
categories = ["network-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = "0.9"
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = "0.3"
