[package]
name = "peeroxide-dht"
version = "1.3.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Rust port of HyperDHT — Kademlia DHT with hole-punching and relay"
readme = "README.md"
keywords = ["dht", "kademlia", "p2p", "holepunch", "hyperswarm"]
categories = ["network-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libudx = { path = "../libudx", version = "1.3.1" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
blake2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = "4"
sha2 = "0.10"
chacha20poly1305 = "0.10"
chacha20 = "0.9"
poly1305 = "0.8"
rand = "0.9"
xsalsa20poly1305 = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
