[package]
name = "peeroxide"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Rust port of Hyperswarm — topic-based P2P peer discovery and connections"
readme = "README.md"
keywords = ["p2p", "peer-to-peer", "hyperswarm", "networking", "dht"]
categories = ["network-programming", "asynchronous"]

[dependencies]
peeroxide-dht = { path = "../peeroxide-dht", version = "1.0.0" }
libudx = { path = "../libudx", version = "1.0.0" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
